index.css
:root {
  --bg-1: #222222e5;
  --bg-button: #4b4b4b63;
  --bg-button-hover: #6464646b;
  --color-text: white;
  --color-accent: #4c9424;
  --color-accent-2: #406d24;
}

body {
  margin: 0;
  display: flex;
  justify-content: center;
  padding-top: 2.5rem;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background: url('https://source.unsplash.com/weekly?nature') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

@media (max-width: 1000px) {
  body {
    font-size: clamp(1.1rem, 3.5vw, 1.5rem);
    padding-top: 0;
    min-height: 100vh;
    align-items: center;
  }
}

::-moz-selection {
  color: var(--color-text);
  background: var(--color-accent);
}

::selection {
  color: var(--color-text);
  background: var(--color-accent);
}

.calculator-container {
  max-width: 90vw;
  background-color: var(--bg-1);
  border: 2px solid var(--color-accent);
  color: var(--color-text);
  border-radius: 0.25em;
  display: inline-block;
  margin: 0 5px;
}

.app-logics {
  padding: 0.7em 1em 1em;
}

.display {
  font-size: 1.4em;
  text-align: right;
  border: 1.5px solid var(--color-accent);
  border-radius: 0.25em;
  padding: 0.3em 0.25em;
  margin-bottom: 0.5em;
}

.calculator-grid {
  display: grid;
  gap: 5px;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(5, 1fr);
  grid-template-areas:
    'reset reset . .'
    '. . . .'
    '. . . .'
    '. . . .';
}

.number {
  min-height: 1.25em;
}

.reset {
  grid-area: reset;
}

.calculator-grid > button {
  font-size: 1em;
  cursor: pointer;
  background-color: var(--bg-button);
  border: 1.7px solid var(--bg-button-hover);
  border-radius: 0.125em;
  padding: 0.25em 0.7em;
  color: var(--color-text);
}

.calculator-grid > button:hover {
  background-color: var(--bg-button-hover);
}

button.background-accent {
  color: var(--bg-1);
  background-color: var(--color-accent-2);
}

button.background-accent:hover {
  background-color: var(--color-accent);
}

.app-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.25em 0.4em 0;
}

.info {
  display: flex;
  gap: 2px;
  font-size: 0.9em;
}

.controls {
  display: flex;
  gap: 2px;
}

.control {
  font-size: 0.9em;
  cursor: pointer;
}

.control:hover {
  color: var(--color-accent);
}

.icon {
  color: var(--color-accent);
}

.app-title {
  letter-spacing: 0.75px;
}

